Updated for 1.18.2, optimized code, added new VehicleTypes

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: VehiclesPickupAddon
 version: ${project.version}
-main: jp.ataru.VehiclesPickupAddon
-api-version: 1.14
+main: jp.marisa.VehiclesPickupAddon
+api-version: 1.18
 depend: [ Vehicles ]
-authors: [ Ataru ]
-description: An addon made for the Vehicles plugin by a fellow member of the same community, with love!
+authors: [Marisa]
+description: An addon made for the Vehicles plugin that allows for toggling of vehicle pickup.
