--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: VehiclesPickupAddon
 version: ${project.version}
-main: jp.marisa.VehiclesPickupAddon
-api-version: 1.18
-depend: [ Vehicles ]
-authors: [Marisa]
+main: tk.nimari.VehiclesPickupAddon
+api-version: 1.14
+depend: [Vehicles]
+authors: [Nimari]
 description: An addon made for the Vehicles plugin that allows for toggling of vehicle pickup.
