GroupID update, (UNTESTED) changed minimum API version to 1.14.4 to allow for compatibility with older versions of Minecraft, updated to the latest version of the Vehicles API

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,4 +4,4 @@ main: tk.nimari.VehiclesPickupAddon
 api-version: 1.14
 depend: [Vehicles]
 authors: [Nimari]
-description: An addon made for the Vehicles plugin that allows for toggling of vehicle pickup.
+description: An addon made for the Minecraft Vehicles plugin that allows for toggling of vehicle pickup.
