--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tk.nimari.vehiclespickupaddon</groupId>
     <artifactId>VehiclesPickupAddon</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.2</version>
     <packaging>jar</packaging>
 
     <name>VehiclesPickupAddon</name>
@@ -40,6 +40,13 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <relocations>
+                                <relocation>
+                                    <pattern>org.bstats</pattern>
+                                    <!-- Replace this with your package! -->
+                                    <shadedPattern>tk.nimari</shadedPattern>
+                                </relocation>
+                            </relocations>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                         </configuration>
                     </execution>
@@ -78,6 +85,12 @@
             <scope>system</scope>
             <version>1.0</version>
             <systemPath>${basedir}/libs/api.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>3.0.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
