--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,5 @@ version: ${project.version}
 main: tk.nimari.VehiclesPickupAddon
 api-version: 1.14
 depend: [Vehicles]
-authors: [Nimari]
+authors: [Nimāri]
 description: An addon made for the Minecraft Vehicles plugin that allows for toggling of vehicle pickup.
